TAG: uniprotload-tr11937-5
DATE: 01/06/2016
STAFF: sc
CHANGES: US139 - implement load script
1. overrideload.config.default
2. override_assoc.config.default - new
	new: INPUT_FILE_ASSOC
	removed: LAST_RUN
	new: ASSOCLOAD_SH

TAG: uniprotload-tr11937-4
DATE: 01/06/2016
STAFF: sc
CHANGES: US139 - implement load script
1) Install - change perms of override_toload.txt output file which is created
   by the QC script, so curators can run
2) overrideload.py - updated comments. split four fatal errors into four diff-
   erent sections in the QC report. Updated QC report section header text.

TAG: uniprotload-tr11937-3
TAG: uniprotload-tr11937-2
DATE: 01/03/2016
STAFF: sc
CHANGES: US138 - implement QC checkes	
1) overrideload.config.default - added INPUT_FILE_TOLOAD
2) overrideQC.py - filled out stub with actual QC checks
3) overrideQC.sh - some tweaks
 
TAG: uniprotload-tr11937-1
DATE: 12/28/2015
STAFF: sc
CHANGES: US134 - add core components for uniprot override load
1) new script stubs: overrideQC.py overrideQC.sh publishOverride runOverrideQC
2) new config: overrideload.config.default
3) index.html - added override load section
4) Install - added install for override load

TAG: uniprotload-tr11937-BP
DATE: 12/22/2015
STAFF: sc
CHANGES: Branch point tag

TAG: uniprotload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) uniprotload.config.default: Don't mail curator log to mgiadmin

TAG: uniprotload-tr12070-BP
DATE: 11/02/2015
STAFF: lec
CHANGES:
1) branch point tag for TR12070/uberon
2) this branch will not be used

TAG: uniprotload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: uniprotload-tr11750-MP
DATE: 07/04/2015
STAFF: lec
CHANGES:
1) merge branch point tag for TR11750/postgres conversion

TAG: uniprotload-tr11750-BP
DATE: 06/03/2015
STAFF: lec
CHANGES:
1) branch point tag for TR11750/postgres conversion

TAG: uniprotload-5-2-0-1
DATE: 10/20/2014
STAFF: lec
CHANGES:
1) TR11817/UniProtParser.py/DE changes
