@@ -1,3 +1,4 @@
+TAG: uniprotload-tr11937-6
 TAG: uniprotload-tr11937-5
 DATE: 01/06/2016
 STAFF: sc
@@ -7,6 +8,7 @@ CHANGES: US139 - implement load script
 	new: INPUT_FILE_ASSOC
 	removed: LAST_RUN
 	new: ASSOCLOAD_SH
+3. overrideload.sh, overrideload.py - new
 
 TAG: uniprotload-tr11937-4
 DATE: 01/06/2016
